# repoq

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  BREAKTHROUGH_ACHIEVEMENTS.md  CHANGELOG-generated.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  INDEX.md  Makefile  ONTOLOGY_ROADMAP.md  PHASE1_CHECKLIST.md  README.md  ROADMAP.md  ROADMAP_ASCII.txt  ROADMAP_VISUAL.md  SELF_APPLICATION_GUIDE.md  after-task1-report.md  baseline-report.md  coverage.json  debug_stakeholder.py  docker-compose.yml  mkdocs.yml  pyproject.toml  refactoring-plan-t1.3-test.md  refactoring-plan-v2.md  refactoring-plan.md  refactoring-tasks.json  repoq_analysis.jsonld  repoq_analysis.md  repoq_self_refactor.ttl  test-t1.1-pydriller.jsonld
.github/: quality-policy.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  docs.yml  pr-quality-gate.yml  release.yml  shacl-validation.yml  trs-verification.yml
.repoq/: manifest.json  roadmap.ttl
.repoq/adr/: adr-014.ttl  adr-015.ttl
.repoq/changelog/: releases.ttl
.repoq/ontologies/: FIELD33_INTEGRATION.md  adr.ttl  changelog.ttl  planning.ttl  repo.ttl  vdad.ttl
.repoq/shapes/: adr-shape.ttl  changelog-shape.ttl  story-shape.ttl
.repoq/story/: phase1.ttl
docs/: MILESTONE_801.md  REFACTORING_FINAL.md  REFACTORING_SESSION_6.md  REFACTORING_SESSION_CONTINUATION.md  SELF_REFACTORING_REPORT.md  ci-cd-setup.md  index.md
docs/about/: limitations.md
docs/adr/: adr-014-single-source-of-truth-generated.md  adr-014-single-source-of-truth.md
docs/api/: reference.md
docs/architecture/: analyzer-pipeline.md  architecture-analyzer.md  baml-agent.md  doc-code-sync-analyzer.md  git-status-analyzer.md  ontologist-agent.md  overview.md  rdf-export.md  repoq-c4-v2.md  stratification-guard.md  trs-framework.md
docs/archive/: MILESTONE_801.md  REFACTORING_FINAL.md  REFACTORING_FINAL_1025.md  REFACTORING_SESSION_6.md  REFACTORING_SESSION_CONTINUATION.md  SELF_REFACTORING_REPORT.md  after-refactor.jsonld  after-step2-cli.jsonld  after-task1-report.md  after-task1.jsonld  after-task2.jsonld  baseline-fresh.jsonld  baseline-quality.jsonld  baseline-report.md  baseline-test-t1.2.jsonld  coverage.json  dogfooding-meta-level.md  improvement-roadmap.md  phase-5.7-ci-cd-report.md  phase4-compliance-report.md  phase4-final-execution-report.md  quality.jsonld  refactoring-plan-t1.3-test.md  refactoring-plan-v2.md  refactoring-progress.md  repoq_analysis.md  task2-cli-refactoring.md  task2-failure-analysis.md
docs/development/: critical-trs-fixes.md  formal-diagrams.md  formal-foundations-complete.md  mathematical-proof-quality-monotonicity.md  meta-loop-closure-roadmap.md  ontology-alignment-report.md  opensource-strategy.md  quality-loop-roadmap.md  tmp-artifacts-inventory.md  traceability-architecture-analysis.md  uv-setup.md
docs/getting-started/: installation.md  quickstart.md
docs/methodology/: ontoMBVE.md
docs/migration/: phase1-workspace.md  phase2-shacl.md  phase5-roadmap-updated.md
docs/ontology/: intelligence.md  meta-loop.md  trs-framework.md
docs/reports/: STATUS-REPORT-2025-10-22.md
docs/stylesheets/: extra.css
docs/tutorials/: 01-first-analysis.md  02-custom-analyzer.md  03-ci-cd-integration.md  04-advanced-filtering.md  05-rdf-queries.md  06-ai-agent-config.md
docs/user-guide/: commands.md  configuration.md  usage.md  workflows.md
docs/vdad/: dogfooding-meta-level.md  dogfooding-retrospective.md  improvement-roadmap.md  phase1-domain-context.md  phase1-stakeholders.md  phase2-value-register.md  phase3-requirements.md  phase4-adr-013-incremental-migration.md  phase4-adrs.md  phase4-architecture-overview.md  phase4-baml-agent.md  phase4-c4-architecture-mapping.md  phase4-c4-diagrams-v2.md  phase4-c4-diagrams.md  phase4-compliance-report.md  phase4-final-execution-report.md  phase4-implementation-report.md  phase4-nfr-realization.md  phase5-migration-roadmap.md  phase5-quick-reference.md  refactor-plan-implementation.md  task2-cli-refactoring.md  task2-failure-analysis.md
examples/: phase2_demo.py  repoq_phase2_demo.ttl
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/MILESTONE_801/: index.html
latest/REFACTORING_FINAL/: index.html
latest/REFACTORING_FINAL_1025/: index.html
latest/REFACTORING_SESSION_6/: index.html
latest/REFACTORING_SESSION_CONTINUATION/: index.html
latest/SELF_REFACTORING_REPORT/: index.html
latest/archive/: baseline-with-functions.jsonld  before-task2.jsonld  repoq_self_refactor.ttl
latest/ci-cd-setup/: index.html
latest/phase-5.7-ci-cd-report/: index.html
latest/search/: search_index.json
ontologies/: FORMALIZATION.md
repoq/: __main__.py  cli.py  cli_meta.py  config.py  gate.py  logging.py  pipeline.py  quality.py  refactoring.py  vc_verification.py
results/: full_verification.json  ontology_self_analysis.json  self_application.json  trs_verification.json
rules/: README.md  self_application_rules.py  trs_properties.py  trs_verifiers.py
scripts/: assert_quality_gates.py  extract_vdad_rdf.py  generate_adr_markdown.py  generate_changelog_markdown.py  generate_phase1_story.py  generate_vdad_markdown.py  phase1_kickoff.sh  self_refactor.py  setup_production.sh  verify_trs.py
tests/: conftest.py  test_baml_agent.py  test_cli.py  test_gate.py  test_meta_loop_integration.py  test_ontology_manager.py  test_pipeline.py  test_quality.py  test_quality_policy.py  test_stratification_guard.py
tmp_repoq-finished/: Makefile  pyproject.toml
tmp_repoq-finished/repoq/: logging.py
tmp_repoq-finished/repoq/analyzers/: ci_qm.py  hotspots.py  structure.py
tmp_repoq-finished/repoq/certs/: linker.py  pack.py  quality.py
tmp_repoq-finished/repoq/core/: model.py  repo_loader.py
tmp_repoq-finished/repoq/integrations/: zag.py
tmp_repoq-finished/repoq/integrations/zag_schemas/: pce_schema.json  zag_manifest_schema.json
tmp_repoq-finished/repoq/ontologies/: context_ext.jsonld
tmp_repoq-finished/repoq/reporting/: diff.py
tmp_repoq-finished/repoq/shapes/: shacl_cert.ttl
(+268 files in other folders)
